[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="HostButton" type="Button" parent="."]
margin_left = 294.0
margin_top = 79.0
margin_right = 491.0
margin_bottom = 99.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
margin_left = 301.0
margin_top = 287.0
margin_right = 498.0
margin_bottom = 307.0
text = "Join"

[node name="StatusLabel" type="Label" parent="."]
margin_left = 296.0
margin_top = 38.0
margin_right = 336.0
margin_bottom = 52.0
text = "Status"
[connection signal="pressed" from="HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_JoinButton_pressed"]
